<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_create_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDE4D6"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/close_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/icon_close_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/create_activity_head"
            android:textColor="#8B5742"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/create_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/icon_send" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
	   	<LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/block_post_background"
	        android:orientation="vertical"
	        android:padding="20dp" >
	        
	        <EditText
	            android:id="@+id/create_activity_title"
	            android:layout_width="match_parent"
	            android:layout_height="40dp"
	            android:background="@drawable/input_single_active"
	            android:gravity="start"
	            android:padding="10dp"
	            android:textSize="16sp"
	            android:singleLine="true"
	            android:hint="@string/create_activity_title_hint" />
	        
	        <LinearLayout
	            android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="10dp" >
	
				<EditText
		            android:id="@+id/create_activity_startdate"
		            android:layout_width="0dp"
		            android:layout_height="40dp"
		            android:layout_weight="2.5"
		            android:background="@drawable/input_single_active"
		            android:gravity="start"
		            android:layout_marginRight="10dp"
		            android:padding="10dp"
		            android:textSize="16sp"
		            android:singleLine="true"
		            android:inputType="date"
		            android:hint="@string/create_activity_startdate_hint" />
				<EditText
		            android:id="@+id/create_activity_starttime"
		            android:layout_width="0dp"
		            android:layout_height="40dp"
		            android:layout_weight="1"
		            android:background="@drawable/input_single_active"
		            android:gravity="start"
		            android:padding="10dp"
		            android:textSize="16sp"
		            android:singleLine="true"
		            android:inputType="time"
		            android:hint="@string/create_activity_time_hint" />
			</LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="10dp" >
				<EditText
		            android:id="@+id/create_activity_enddate"
		            android:layout_width="0dp"
		            android:layout_height="40dp"
		            android:layout_weight="2.5"
		            android:background="@drawable/input_single_active"
		            android:gravity="start"
		            android:layout_marginRight="10dp"
		            android:padding="10dp"
		            android:textSize="16sp"
		            android:singleLine="true"
		            android:inputType="date"
		            android:hint="@string/create_activity_enddate_hint" />
				<EditText
		            android:id="@+id/create_activity_endtime"
		            android:layout_width="0dp"
		            android:layout_height="40dp"
		            android:layout_weight="1"
		            android:background="@drawable/input_single_active"
		            android:gravity="start"
		            android:padding="10dp"
		            android:textSize="16sp"
		            android:singleLine="true"
		            android:inputType="time"
		            android:hint="@string/create_activity_time_hint" />
			</LinearLayout>
	        
	        <EditText
	            android:id="@+id/create_activity_spot"
	            android:layout_width="match_parent"
	            android:layout_height="40dp"
	            android:layout_marginTop="10dp"
	            android:background="@drawable/input_single_active"
	            android:gravity="start"
	            android:padding="10dp"
	            android:textSize="16sp"
	            android:singleLine="true"
	            android:hint="@string/create_activity_spot_hint" />
	        
	        <EditText
	            android:id="@+id/create_activity_maxnum"
	            android:layout_width="match_parent"
	            android:layout_height="40dp"
	            android:layout_marginTop="10dp"
	            android:background="@drawable/input_single_active"
	            android:gravity="start"
	            android:padding="10dp"
	            android:textSize="16sp"
	            android:singleLine="true"
	            android:inputType="textPassword|number"
	            android:hint="@string/create_activity_maxnum_hint" />
	        
	        <EditText
	            android:id="@+id/create_activity_detail"
	            android:layout_width="match_parent"
	            android:layout_height="200dp"
	            android:layout_marginTop="10dp"
	            android:background="@drawable/input_single_active"
	            android:gravity="start"
	            android:padding="10dp"
	            android:textSize="16sp"
	            android:hint="@string/create_activity_detail_hint" />
	    </LinearLayout>
    </ScrollView>

</LinearLayout>