<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Setting_yijian"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECE4D7"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/loginTop_yijianfankui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/setting_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/icon_back_enable" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/edit_profile_head"
            android:textColor="#ffffff"
            android:textSize="25dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            	<LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical|center_horizontal"
		            android:orientation="horizontal"
		            android:layout_marginTop="5dp" >
		            
	           	    <ImageView
	                    android:id="@+id/UserCamera"
	                    android:layout_width="70dp"
	                    android:layout_height="70dp"
	                    android:src="@drawable/default_avatar_lead1" />
	        	</LinearLayout>
	        	
            	<LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical|center_horizontal"
		            android:orientation="horizontal"
		            android:layout_marginTop="5dp" >
		            
	           	    <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/user_image_hint"
		                android:textColor="#aaa"
		                android:textSize="12sp" />
	        	</LinearLayout>
             	
	            <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical"
		            android:orientation="horizontal"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"
		            android:layout_marginTop="15dp" >
		
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:text="@string/gender"
		                android:textColor="#815F3D"
		                android:textSize="15sp" />
		            <TextView
	                    android:id="@+id/gender_text"
	                    android:layout_width="0dp"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1.2"
	                    android:text="MALE"
	                    android:textSize="15sp" />
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:text="@string/user_image_hint"
		                android:textColor="#aaa"
		                android:textSize="12sp" />
	        	</LinearLayout>
        
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical"
		            android:orientation="horizontal"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"
		            android:layout_marginTop="8dp" >
		
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:text="@string/age"
		                android:textColor="#815F3D"
		                android:textSize="15sp" />
		
		            <EditText
		                android:id="@+id/age_Edittext"
		                android:layout_width="0dp"
		                android:layout_height="40dp"
		                android:layout_weight="2.2"
		                android:padding="10dp"
		                android:background="@drawable/input_single_active"
		                android:gravity="start"
		                android:textSize="16sp"
		                android:singleLine="true"
		                android:inputType="textPassword|number" />
		        </LinearLayout>
		        
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical"
		            android:orientation="horizontal"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"
		            android:layout_marginTop="5dp" >
		
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:text="@string/address"
		                android:textColor="#815F3D"
		                android:textSize="15sp" />
		
		            <EditText
		                android:id="@+id/address_Edittext"
		                android:layout_width="0dp"
		                android:layout_height="60dp"
		                android:layout_weight="2.2"
		                android:padding="10dp"
		                android:background="@drawable/input_single_active"
		                android:gravity="start"
		                android:textSize="16sp" />
		        </LinearLayout>
		        
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical"
		            android:orientation="horizontal"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"
		            android:layout_marginTop="5dp" >
		
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:text="@string/email"
		                android:textColor="#815F3D"
		                android:textSize="15sp" />
		
		            <EditText
		                android:id="@+id/email_Edittext"
		                android:layout_width="0dp"
		                android:layout_height="40dp"
		                android:layout_weight="2.2"
		                android:padding="10dp"
		                android:background="@drawable/input_single_active"
		                android:gravity="start"
		                android:textSize="16sp"
		                android:singleLine="true"
		                android:inputType="textEmailAddress" />
		        </LinearLayout>
		        
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical"
		            android:orientation="horizontal"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"
		            android:layout_marginTop="5dp" >
		
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:text="@string/status"
		                android:textColor="#815F3D"
		                android:textSize="15sp" />
		
		            <EditText
		                android:id="@+id/status_Edittext"
		                android:layout_width="0dp"
		                android:layout_height="60dp"
		                android:padding="10dp"
		                android:background="@drawable/input_single_active"
		                android:gravity="start"
		                android:layout_weight="2.2"
		                android:textSize="16sp" />
		        </LinearLayout>
		        
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical"
		            android:orientation="horizontal"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"
		            android:layout_marginTop="5dp" >
		
		            <TextView
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="1"
		                android:text="FACEBOOK"
		                android:textColor="#815F3D"
		                android:textSize="15sp" />
		
		            <EditText
		                android:id="@+id/fb_account_name"
		                android:layout_width="0dp"
		                android:layout_height="40dp"
		                android:layout_weight="2.2"
		                android:padding="10dp"
		                android:background="@drawable/input_single_active"
		                android:gravity="start"
		                android:textSize="16sp"
		                android:singleLine="true"
		                android:hint="account name" />
		        </LinearLayout>
		        
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical"
		            android:orientation="horizontal"
		            android:paddingLeft="10dp"
		            android:paddingRight="10dp"
		            android:layout_marginTop="10dp" >
		            
			        <Button
		                android:id="@+id/save_button"
		                android:layout_width="match_parent"
		                android:layout_height="40dp"
		                android:background="@drawable/security_row_button2"
		                android:text="@string/btn_save"
		                android:textColor="#000"
		                android:textSize="15sp" />
		 		</LinearLayout>
		 
         </LinearLayout>
                
    </ScrollView>

</LinearLayout>